# leginon-py3

./: .gitattributes  launcher.bat  pyproject.toml  start.bat  syscheck.bat
etc/: git-version.txt  version
sbin/: env  update  version
