[tool.poetry]
name = "leginon-py3"
version = "0.1.0"
description = ""
authors = ["semcit <semcit@nysbc.org>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19.3"
scipy = "^1.5.4"
pillow = "^8.1.0"
pymysql = "^1.0.2"
wxpython = "4.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
